# feature-full-system

./: .env  Dockerfile  README.md  docker-compose.yml  mein-erster-entwurf.md  pyproject.toml  test2.md
.github/workflows/: korrekturlesen.yml  test-artikel.md  test-berechtigung.yml
scripts/: proofread.py
scripts /: proofread.py
src/: __init__.py  app.py  dependencies.py  scheduler.py
src/fetcher/: base.py  init.py  manager.py
src/fetcher/plugins/: scraperapi_plugin.py
src/models/: db.py  log.py  user.py
src/renderer/: email.py
src/routes/: admin.py  auth.py
src/sender/: mail.py
src/utils/: scraper.py
templates/: login.html
