[tool.poetry]
name = "news-aggregator"
version = "0.1.0"
description = "Universeller News-Aggregator mit User-Management und Human-Like Scraper"
authors = ["Dein Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8"
feedparser = "^6.0"
jinja2 = "^3.1"
aiosqlite = "^0.17"
python-dotenv = "^0.21"
fastapi = "^0.95"
uvicorn = {extras = ["standard"], version = "^0.22"}
apscheduler = "^3.10"
sqlmodel = "^0.0.6"
passlib = "^1.7"
python-jose = "^3.3"
playwright = "^1.37"
uvloop = "^0.17"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20"
flake8 = "^6.0"
black = "^23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
