[tool.poetry]
name = "fastapi-newsletter"
version = "0.1.0"
description = "Newsletter Fetcher & Sender with FastAPI"
authors = ["Marco <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.14"
python-multipart = "^0.0.6"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
apscheduler = "^3.10.4"
playwright = "^1.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
